RESOLVED FIXED203843
MessagePort::close cannot assume that is execution context is not null
https://bugs.webkit.org/show_bug.cgi?id=203843
Summary MessagePort::close cannot assume that is execution context is not null
youenn fablet
Reported 2019-11-04 23:36:47 PST
MessagePort::close cannot assume that is execution context is not null
Attachments
Patch (5.59 KB, patch)
2019-11-05 00:03 PST, youenn fablet
no flags
youenn fablet
Comment 1 2019-11-04 23:37:53 PST
youenn fablet
Comment 2 2019-11-05 00:03:27 PST
WebKit Commit Bot
Comment 3 2019-11-05 08:59:04 PST
Comment on attachment 382809 [details] Patch Clearing flags on attachment: 382809 Committed r252056: <https://trac.webkit.org/changeset/252056>
WebKit Commit Bot
Comment 4 2019-11-05 08:59:06 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.