MessagePort::close cannot assume that is execution context is not null https://bugs.webkit.org/show_bug.cgi?id=203843 <rdar://problem/55599877>

Reviewed by Chris Dumez.

Source/WebCore:

Covered by updated test.

* dom/MessagePort.cpp:
(WebCore::MessagePort::close):
Do not use m_scriptExecutionContext since it can be nulled out in MessagePort::disentangle.
* dom/messageports/WorkerMessagePortChannelProvider.cpp:
(WebCore::WorkerMessagePortChannelProvider::messagePortClosed):

LayoutTests:

* http/tests/workers/service/basic-messageport-expected.txt:
* http/tests/workers/service/resources/basic-messageport.js:
(async.doLog):
(then):
(): Deleted.


Canonical link: https://commits.webkit.org/217210@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252056 268f45cc-cd09-0410-ab3c-d52691b4dbfc