LayoutTests/http/tests/workers/service/resources/basic-messageport.js
@@ -1,12 +1,17 @@
 var messages = [];
+var registration;
 
-function doLog(message)
+async function doLog(message)
 {
     messages.push(message)
     if (messages.length === 3) {
         messages.sort();
         for (let message of messages)
             log(message);
+        channel.port2.close();
+        if (registration)
+            await registration.unregister();
+        log("Test finished");
         finishSWTest();
     }
 }
@@ -20,12 +25,15 @@ channel.port1.onmessage = function(event) {
     doLog("Message received from MessagePort: " + event.data);
 }
 
-navigator.serviceWorker.register("resources/messageport-echo-worker.js", { }).then(function(registration) {
+navigator.serviceWorker.register("resources/messageport-echo-worker.js", { }).then((r) => {
+    registration = r;
     try {
         registration.installing.postMessage("Here is your port", [channel.port2]);
         channel.port1.postMessage("Message to a port!");
     } catch(e) {
         doLog("Exception: " + e);
+        if (registration)
+            registration.unregister();
         finishSWTest();
     }
 });
